--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,8 +1,8 @@
-.container{
-    position: absolute;
-    width: 100%;
-    top: 0;
-    z-index: -3;
+.container {
+  position: absolute;
+  width: 100%;
+  top: 0;
+  z-index: -3;
 }
 
 .contenedorTemplate {
@@ -35,75 +35,251 @@
   background-size: cover;
 }
 
-.todosContainer{
-    position: absolute;
-    width: 327px;
-    height: 100vh;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%, 0);
+.todosContainer {
+  position: absolute;
+  width: 327px;
+  height: 100vh;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
-.title{
-    margin-top: 31px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+.title {
+  margin-top: 31px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 }
 
-.title h1{
-    font-size: 26px;
-    letter-spacing: 10.5px;
-    font-weight: 700;
+.title h1 {
+  font-size: 26px;
+  letter-spacing: 10.5px;
+  font-weight: 700;
+  color: white;
 }
 
-.txtTodo{
-    margin-top: 10px;
-    width: 320px;
-    height: 48px;
-    border-radius: 5px;
+.addTodo {
+  display: flex;
+  margin-top: 14px;
+  width: 322px;
+  height: 48px;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0 2px 1px rgba(93, 93, 93, 0.1);
+  flex-direction: row;
+  align-items: center;
+  gap:10px;
 }
 
-.todosItems{
-    margin-top: 14px;
-    width: 325px;
-    border-radius: 5px;
-    
-    border:solid 0.1px;
-    border-color: blue;
+.addTodo button {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 1px solid var(--light-grayish-blue);
+  margin-left: 20px;
+  background-color: white;
+  cursor: pointer;
 }
 
-.todosItems ul{
-    list-style-type: none;
-    margin-left: -28px;
-    
+.txtTodo {
+
+  border: none;
+  outline: none;
+  background: transparent;
+  color: var(--light-grayish-blue);
+  font-size: 12px;
 }
 
-.todosItems input[type="checkbox"] {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    border: 1px solid #ccc;
-    outline: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    appearance: none;
-  }
+.todosItems {
+  margin-top: 18px;
+  width: 325px;
+  border-radius: 5px;
 
-  .todosItems input[type="checkbox"]:checked {
-    font-size: 12px;
+  box-shadow: 0.5px 5px 3px rgba(93, 93, 93, 0.1);
+}
+
+.todosItems ul li {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 52px;
+  font-size: 11px;
+  font-weight: 700;
+  gap: 10px;
+  border-bottom: 1px solid var(--light-grayish-blue);
+}
+
+.todosItems ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  width: 327px;
+}
+
+/* .todosItems input[type="checkbox"] {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+
+  outline: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  color: white;
+} */
+
+/* .todosItems input[type="checkbox"]:checked {
     background-image: var(--background-color);
-    
-  }
+  }/* Base para el estilo del checkbox */
+/* Estilo para el checkbox personalizado */
+/* Estilo para el checkbox personalizado */
 
-.todosItems ul li{
-   height: 53px;
+/* Estilo para el checkbox personalizado */
+.todosItems input[type="checkbox"] {
+  position: absolute; /* Sacar del flujo del documento */
+  opacity: 0; /* Ocultar */
 }
 
+.todosItems input[type="checkbox"] + label {
+  position: relative;
+  cursor: pointer;
+  padding: 0;
+  margin-left: 16px;
+  margin-right: 4px;
+  border: solid 0.5px;
+  border-radius: 50%;
+  border-color: var(--light-grayish-blue);
+}
 
+/* Aspecto del cuadro */
+.todosItems input[type="checkbox"] + label:before {
+  content: "";
+  border: solid 0.5px;
+  border-color: var(--light-grayish-blue);
+  display: inline-block;
+  vertical-align: middle;
+  width: 20px;
+  height: 20px;
+  background: white;
+  border-radius: 50%;
+  color: var(--very-dark-grayish-blue);
+}
 
+/* Cambios en el cuadro al pasar el cursor */
+.todosItems input[type="checkbox"]:hover + label:before {
+  background: white;
+}
+
+/* Cambios en el cuadro al enfocar */
+.todosItems input[type="checkbox"]:focus + label:before {
+  box-shadow: 0 0 0 0.5px rgba(0, 0, 0, 0.1);
+}
+
+/* Cambios en el cuadro cuando está marcado */
+.todosItems input[type="checkbox"]:checked + label:before {
+  background-image: var(--background-color);
+}
+
+/* Estado deshabilitado de la etiqueta */
+.todosItems input[type="checkbox"]:disabled + label {
+  color: #b8b8b8;
+  cursor: auto;
+}
+
+/* Cuadro deshabilitado */
+.todosItems input[type="checkbox"]:disabled + label:before {
+  box-shadow: none;
+  background: #ddd;
+}
+
+/* Marca de verificación. Puede ser reemplazada por una imagen */
+.todosItems input[type="checkbox"]:checked + label:after {
+  content: "";
+  position: absolute;
+  left: 5px;
+  top: 9px;
+  background: white;
+  width: 2px;
+  height: 2px;
+  box-shadow: 2px 0 0 white, 4px 0 0 white, 4px -2px 0 white, 4px -4px 0 white,
+    4px -6px 0 white, 4px -8px 0 white;
+  transform: rotate(45deg);
+}
+
+/* FIN DEL CHECKBOX PERSONALIZADO */
+/* =========================== */
+
+.todosItems span {
+  width: 225px;
+  cursor: pointer;
+  color: var(--dark-grayish-blue);
+}
+
+.todosItems button {
+  width: 25px;
+  border: none;
+  background-color: white;
+  font-size: 30px;
+  font-weight: 100;
+  transform: rotate(45deg);
+  color: var(--light-grayish-blue);
+  cursor: pointer;
+  letter-spacing: -1px;
+}
+
+.status {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 10px;
+  align-items: center;
+  font-size: 11px;
+  padding: 0 10px 0px 10px;
+  margin-top: 1px;
+  height: 48px;
+  color: var(--light-grayish-blue);
+}
+
+.clearCompleted {
+  cursor: pointer;
+}
+
+.filter {
+  margin-top: 15px;
+  width: 327px;
+  height: 48px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0.5px 5px 3px rgba(93, 93, 93, 0.1);
+  gap: 10px;
+  font-size: 16px;
+  font-weight: 700;
+  color: var(--dark-grayish-blue);
+  background-color: white;
+  border-radius: 5px;
+  
+}
+
+.filter span{
+    cursor: pointer;
+}
+
+.selected {
+  color: var(--blue);
+}
+
+.alertDragAndDrop{
+    margin-top: 45px;
+    text-align: center;
+    font-size: 12px;
+    font-weight: 700;
+    color: var(--dark-grayish-blue);
+}
 
 @media screen and (min-width: 927px) {
 }
