--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,6 +3,7 @@
   width: 100%;
   top: 0;
   z-index: -3;
+  
 }
 
 .contenedorTemplate {
@@ -16,16 +17,33 @@
   z-index: -1;
 }
 
+.imgDesktop{
+  display: none;
+} 
+
+.imgMobile{
+  display: block;
+} 
+
 .contentIllustration {
   position: absolute;
   top: 0;
   width: 100%;
-  height: 200px;
-  background-color: var(--very-dark-desaturated-blue);
+
+  background-color: var(--head);
   display: flex;
   justify-content: center;
   z-index: -2;
+
 }
+
+/* .illustration {
+  width: 400px;
+  height: 593px;
+  background-image: url("/images/illustration-sign-up-desktop.svg");
+  background-size: cover;
+} */
+
 
 .illustration {
   position: absolute;
@@ -33,6 +51,8 @@
   left: 50%;
   transform: translate(-50%, 0);
   background-size: cover;
+  background-image:var(--image-header);
+  z-index: 2;
 }
 
 .todosContainer {
@@ -70,164 +90,45 @@
   flex-direction: row;
   align-items: center;
   gap:10px;
+  background-color: var(--bk-color-todo);
+  
 }
 
 .addTodo button {
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  border: 1px solid var(--light-grayish-blue);
+  border: 1px solid var( --btn-check);
   margin-left: 20px;
-  background-color: white;
+  background-color: transparent;
   cursor: pointer;
 }
 
 .txtTodo {
-
+  
   border: none;
   outline: none;
   background: transparent;
-  color: var(--light-grayish-blue);
+  
   font-size: 12px;
+  font-family: 'Josefin Sans', italic;
 }
 
 .todosItems {
   margin-top: 18px;
   width: 325px;
   border-radius: 5px;
-
+  background-color: var(--bk-color-todo);
   box-shadow: 0.5px 5px 3px rgba(93, 93, 93, 0.1);
 }
 
-.todosItems ul li {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  height: 52px;
-  font-size: 11px;
-  font-weight: 700;
-  gap: 10px;
-  border-bottom: 1px solid var(--light-grayish-blue);
-}
-
 .todosItems ul {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-  width: 327px;
-}
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+    width: 327px;
+  }
 
-/* .todosItems input[type="checkbox"] {
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-
-  outline: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  appearance: none;
-  color: white;
-} */
-
-/* .todosItems input[type="checkbox"]:checked {
-    background-image: var(--background-color);
-  }/* Base para el estilo del checkbox */
-/* Estilo para el checkbox personalizado */
-/* Estilo para el checkbox personalizado */
-
-/* Estilo para el checkbox personalizado */
-.todosItems input[type="checkbox"] {
-  position: absolute; /* Sacar del flujo del documento */
-  opacity: 0; /* Ocultar */
-}
-
-.todosItems input[type="checkbox"] + label {
-  position: relative;
-  cursor: pointer;
-  padding: 0;
-  margin-left: 16px;
-  margin-right: 4px;
-  border: solid 0.5px;
-  border-radius: 50%;
-  border-color: var(--light-grayish-blue);
-}
-
-/* Aspecto del cuadro */
-.todosItems input[type="checkbox"] + label:before {
-  content: "";
-  border: solid 0.5px;
-  border-color: var(--light-grayish-blue);
-  display: inline-block;
-  vertical-align: middle;
-  width: 20px;
-  height: 20px;
-  background: white;
-  border-radius: 50%;
-  color: var(--very-dark-grayish-blue);
-}
-
-/* Cambios en el cuadro al pasar el cursor */
-.todosItems input[type="checkbox"]:hover + label:before {
-  background: white;
-}
-
-/* Cambios en el cuadro al enfocar */
-.todosItems input[type="checkbox"]:focus + label:before {
-  box-shadow: 0 0 0 0.5px rgba(0, 0, 0, 0.1);
-}
-
-/* Cambios en el cuadro cuando está marcado */
-.todosItems input[type="checkbox"]:checked + label:before {
-  background-image: var(--background-color);
-}
-
-/* Estado deshabilitado de la etiqueta */
-.todosItems input[type="checkbox"]:disabled + label {
-  color: #b8b8b8;
-  cursor: auto;
-}
-
-/* Cuadro deshabilitado */
-.todosItems input[type="checkbox"]:disabled + label:before {
-  box-shadow: none;
-  background: #ddd;
-}
-
-/* Marca de verificación. Puede ser reemplazada por una imagen */
-.todosItems input[type="checkbox"]:checked + label:after {
-  content: "";
-  position: absolute;
-  left: 5px;
-  top: 9px;
-  background: white;
-  width: 2px;
-  height: 2px;
-  box-shadow: 2px 0 0 white, 4px 0 0 white, 4px -2px 0 white, 4px -4px 0 white,
-    4px -6px 0 white, 4px -8px 0 white;
-  transform: rotate(45deg);
-}
-
-/* FIN DEL CHECKBOX PERSONALIZADO */
-/* =========================== */
-
-.todosItems span {
-  width: 225px;
-  cursor: pointer;
-  color: var(--dark-grayish-blue);
-}
-
-.todosItems button {
-  width: 25px;
-  border: none;
-  background-color: white;
-  font-size: 30px;
-  font-weight: 100;
-  transform: rotate(45deg);
-  color: var(--light-grayish-blue);
-  cursor: pointer;
-  letter-spacing: -1px;
-}
 
 .status {
   position: relative;
@@ -245,6 +146,7 @@
 
 .clearCompleted {
   cursor: pointer;
+  
 }
 
 .filter {
@@ -260,7 +162,7 @@
   font-size: 16px;
   font-weight: 700;
   color: var(--dark-grayish-blue);
-  background-color: white;
+  background-color: var(--bk-color-todo);
   border-radius: 5px;
   
 }
@@ -281,5 +183,26 @@
     color: var(--dark-grayish-blue);
 }
 
-@media screen and (min-width: 927px) {
+@media screen and (min-width: 541px) {
+  .todosContainer {
+
+    width: 541px;
+  }
+
+  .contentIllustration {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 300px;
+  }
+
+  
+.imgDesktop{
+  display: block;
+} 
+
+.imgMobile{
+  display: none;
+} 
+
 }
