--- a/styles/TodoItem.module.css
+++ b/styles/TodoItem.module.css
@@ -3,11 +3,11 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    height: 52px;
+    height: 53px;
     font-size: 11px;
     font-weight: 700;
     gap: 10px;
-    border-bottom: 1px solid var(--very-dark-grayish-blue);
+    border-bottom: 1px solid var(--line-todo);
   }
   
   /* Ocultar checkbox*/
@@ -22,28 +22,28 @@
     padding: 0;
     margin-left: 16px;
     margin-right: 4px;
-    border: solid 0.5px;
+    border: solid 0px  var(--very-light-grayish-blue);
     border-radius: 50%;
-    border-color: var(--light-grayish-blue);
+
   }
   
   /* Aspecto del cuadro */
   .todoItem input[type="checkbox"] + label:before {
     content: "";
-    border: solid 0.5px;
-    border-color: var(--light-grayish-blue);
+    border: solid 0.1px;
+    border-color: var(--line-todo);
     display: inline-block;
     vertical-align: middle;
     width: 20px;
     height: 20px;
-    background: white;
+    background: transparent;
     border-radius: 50%;
     color: var(--very-dark-grayish-blue);
   }
   
   /* Cambios en el cuadro al pasar el cursor */
   .todoItem input[type="checkbox"]:hover + label:before {
-    background: white;
+    background:var(--line-todo);
   }
   
   /* Cambios en el cuadro al enfocar */
@@ -77,7 +77,7 @@
     background: white;
     width: 2px;
     height: 2px;
-    box-shadow: 2px 0 0 white, 4px 0 0 white, 4px -2px 0 white, 4px -4px 0 white,
+    box-shadow: 2px 0 0 white, 4px 0 0 white, 2px -2px 0 white, 4px -4px 0 white,
       4px -6px 0 white, 4px -8px 0 white;
     transform: rotate(45deg);
   }
@@ -100,3 +100,31 @@
     cursor: pointer;
 
   }
+
+  @media screen and (min-width: 541px) {
+
+    .todoItem {
+      font-size: 18px;
+      font-weight: 700;
+      gap: 18px;
+      height: 64px;
+      letter-spacing: -0.7px;
+    }
+
+
+    .todoItem input[type="checkbox"] + label {
+      margin-left: 23px;
+      margin-right: 6px;
+    }
+
+    .todoItem input[type="checkbox"] + label:before {
+      width: 22px;
+      height: 22px;
+    }
+
+    .todoItem span {
+      width: 410px;
+      font-weight: 400;
+    }
+
+    }
